Update to use cflinuxfs2 stack

--- a/manifest.yml
+++ b/manifest.yml
@@ -8,6 +8,7 @@ applications:
   services:
     app-termcast-server-port:
       type: harbor
+  stack: cflinuxfs2
   stackato:
     hooks:
       pre-staging:
